name:                Fizzckle
version:             0.1.0.0
synopsis:            Yesod/Twilio wepapp for managing finances
homepage:            https://github.com/josuf107/Fizzckle
license:             GPL-3
license-file:        LICENSE
author:              Joseph Barratt
maintainer:          joseph.m.barratt@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable Fizzckle
    main-is:             FizzWeb.hs
    ghc-options:   -threaded -Wall -O2
    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.2        && < 1.3
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 2.0        && < 2.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.0        && < 2.1
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 2.0        && < 2.1
                 , data-default
                 , aeson
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.1
                 , wai-logger                    >= 2.0
                 , time
                 , filepath
                 , parsec
                 , transformers                  >= 3.0 -- stupid mmorph package mistake
