name:                Fizzckle
version:             0.1.0.0
synopsis:            Yesod/Twilio wepapp for managing finances
homepage:            https://github.com/josuf107/Fizzckle
license:             GPL-3
license-file:        LICENSE
author:              Joseph Barratt
maintainer:          joseph.m.barratt@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable Fizzckle
    main-is:             FizzWeb.hs
    other-modules: Fizz Fizz.Core Fizz.Store Fizz.Log Fizz.Utils Fizz.Infuser
    hs-source-dirs:      src
    ghc-options:   -threaded -Wall -O2
    build-depends: base
                 , yesod
                 , bytestring
                 , text
                 , containers
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , time
                 , filepath
                 , parsec
                 , transformers
                 , cassava
                 , vector
